<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gia phả online</string>
    <string name="slash_screen_text1">Dành thời gian cho gia đình cùng GPO</string>
    <string name="get_started_btn">Bắt đầu</string>
    <string name="image_description">Node Image</string>
    <string name="welcome_back_text">Chào mừng quay lại</string>
    <string name="home_item_text">Trang chủ</string>
    <string name="album_item_text">Album</string>
    <string name="profile_item_text">Cá nhân</string>
    <string name="tree_item_text">Gia phả</string>
    <string name="add_item_description">add new family tree</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_album_activity_title">Tạo mới album</string>
    <string name="image_detail_activity_title">Xem ảnh</string>
    <string name="delete_image_btn">Xóa ảnh</string>
    <string name="delete_image_popup_title">Xóa ảnh</string>
    <string name="delete_image_popup_content">Bạn có chắc chắn xóa không?</string>
    <string name="delete_image_popup_confirm_btn">Xóa</string>
    <string name="delete_image_popup_cancle_btn">Hủy</string>

    <string-array name="gender_options">
        <item>Nam</item>
        <item>Nữ</item>
    </string-array>

    <string-array name="marital_status_options">
        <item>Độc thân</item>
        <item>Đã kết hôn</item>
        <item>Ly hôn</item>
        <item>Góa</item>
    </string-array>

    <string name="select_province">Chọn Tỉnh/Thành phố</string>
    <string name="select_district">Chọn Quận/Huyện</string>
    <string name="select_ward">Chọn Phường/Xã</string>
</resources>