<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_icon"
        android:title="@string/home_item_text"/>
    <item
        android:id="@+id/albumFragment"
        android:icon="@drawable/album_icon"
        android:title="@string/album_item_text"/>

    <item
        android:id="@+id/notificationFragment"
        android:title="Thông báo"
        android:icon="@drawable/notification_icon"/>
    <item
        android:id="@+id/tree"
        android:title="@string/tree_item_text"
        android:icon="@drawable/tree_icon"/>

    <item android:id="@+id/profile"
        android:title="@string/profile_item_text"
        android:icon="@drawable/profile_icon"/>
</menu>